<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteDetallado">

    <include
        android:id="@+id/barra"
        layout="@layout/toolbar_back" />
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generar_reporte"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/barra" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipo_reporte"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.05"
        app:startIconDrawable="@drawable/icon_report2">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_de_reporte"
            android:inputType="none"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:minHeight="150dp"
        app:layout_constraintTop_toBottomOf="@id/tipo_reporte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textSize="20sp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        tools:ignore="VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <Switch
        android:id="@+id/switch_ayuda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:checked="true"
        android:fontFamily="sans-serif-medium"
        android:minHeight="48dp"
        android:text="@string/pregunta_ayuda"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/generar_reporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_ayuda"
        app:layout_constraintVertical_bias="1"
        android:text="@string/realizar_reporte"/>





</androidx.constraintlayout.widget.ConstraintLayout>





