<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSeguridad">
    <include
        android:id="@+id/bar"
        layout="@layout/toolbar"/>
    <ImageView
        android:id="@+id/icono_uanl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="115dp"
        app:layout_constraintWidth_max="115dp"
        android:src="@drawable/uanl_logo"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.03"
        android:contentDescription="@string/uanl_logo" />
    <ImageView
        android:id="@+id/icono_seguridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="150dp"
        android:src="@drawable/icono_seguridad"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:contentDescription="@string/icono_seguridad" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/historial"
        android:text="@string/historial_de_reportes"
        app:icon="@drawable/history_icon"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icono_uanl"
        app:layout_constraintVertical_bias="0"
        android:minHeight="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:ignore="VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>